--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "flowbite-react": "^0.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
