--- a/public/projectlist.json
+++ b/public/projectlist.json
@@ -1,110 +1,78 @@
 [{
         "id": 1,
-        "tittle": "Backend Development",
-        "dis": " I've successfully completed the Backend Development course with PW Skills.",
-        "link": "https://drive.google.com/file/d/1idUtVF5M8jQDuecGq7jhcvn6UkXV5l9w/view?usp=sharing",
-        "img": "../src/assets/Back.png"
+        "tittle": "Book-store",
+        "dis": "The 'Book-Store' is a React-based single-page application designed to provide a user-friendly interface for a book store. The project utilizes Vite for an optimized development and build process, ensuring quick iterations and efficient builds. It includes ESLint configuration to maintain code quality and uses Tailwind CSS for streamlined and responsive styling. The project is primarily written in JavaScript, with supplementary use of CSS and HTML to enhance functionality and presentation.",
+        "live_link": "https://collectionbooks.netlify.app/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Book-Store-Frontend.git",
+        "img": "../public/projectImg/Book-app.png"
     },
     {
         "id": 2,
-        "tittle": "Simple Website",
-        "dis": " Leveraging the power of React DOM and React Router, I've crafted a dynamic web application that offers seamless navigation and a smooth user experience.",
-        "link": "https://drive.google.com/file/d/1SASh5jPsQo28MK3S58Wyf3UcpZh_WYtv/view",
-        "img": "https://media.licdn.com/dms/image/D5622AQFSud4fh4Z4KA/feedshare-shrink_2048_1536/0/1710477039668?e=1717632000&v=beta&t=2v7H1clrbPmBzT6-acDQZyWR065U76gauKvsXvNCSmQ"
+        "tittle": "Travel-app",
+        "dis": "The 'Tour-and-Travel' project is a comprehensive web application designed to facilitate users in exploring and booking travel destinations. Featuring a modern tech stack with React and Vite, it ensures efficient development and high performance. Users can browse various tours, view detailed travel packages including itineraries and prices, and make bookings directly through the app",
+        "live_link": "https://nomadman.netlify.app/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Tour-and-travel.git",
+        "img": "../public/projectImg/travel.png"
+
 
     },
     {
         "id": 3,
-        "tittle": "Full Stack Web Developmment",
-        "dis": " I've successfully completed the Full Stack Web Development course from PW Skills",
-        "link": "https://drive.google.com/file/d/1K4dQrS7k06yVaQMk0kSP_V381-RtEzX5/view",
-        "img": "https://media.licdn.com/dms/image/D5622AQHgqSwgI9TQEQ/feedshare-shrink_800/0/1709004071077?e=1717632000&v=beta&t=s6h-vU1-OExtjOS3Aer0Sy5vt3PBpsht8DDqUj2OYyA"
+        "tittle": "Social Media Dashboard",
+        "dis": "The 'Social Media Dashboard' project is a web application built using HTML, CSS, and JavaScript. It allows users to perform various social media functions, such as posting stories, writing posts, liking, commenting, and sharing content. The application includes navigation bars, search functionality, user settings, shortcuts, and displays sections like news, friends, groups, events, and advertisements.",
+        "live_link": "https://jaiswalrahul2427.github.io/Social-Media-Dashboard/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Social-Media-Dashboard.git",
+        "img": "../public/projectImg/social-media.png"
 
     },
     {
         "id": 4,
-        "tittle": "Spoken English",
-        "dis": "I have successfully completed the 'Spoken English' course offered by Great Learning Academy. ",
-        "link": "https://drive.google.com/file/d/1zBv6HU3kAsI-CcNESiJVn6lxM7o4zrsF/view",
+        "tittle": "Hospital Website",
+        "dis": "This repository contains the code for a landing page designed for a healthcare website. The landing page is structured to provide information about the healthcare services offered, facilities available, patient reviews, and a means to make appointments.",
+        "live_link": "https://jaiswalrahul2427.github.io/Responsive-Hospital-Website/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Responsive-Hospital-Website.git",
         "img": "https://media.licdn.com/dms/image/D5622AQGukqJmpndifw/feedshare-shrink_2048_1536/0/1707706128973?e=1717632000&v=beta&t=msUAHog94zDj9asVHjmx9xom7wzeN6N-jtHkD7qBejg"
     },
     {
         "id": 5,
-        "tittle": "AWS Skill Builder Course ",
-        "dis": "I have successfully completed the Amazon Web Services (AWS) Skill Builder Learner Guide from Amazon Training and Certification! ",
-        "link": "https://drive.google.com/file/d/1AujoBUQxhUXKCDQrMFNfWkzVQoxbr1ip/view",
-        "img": "https://media.licdn.com/dms/image/D5622AQHKv33LoBqbeQ/feedshare-shrink_800/0/1706071517742?e=1717632000&v=beta&t=Fw501s5avekgpjWyk0a6i-hmoH5FAr-FGkfVdNOaGQs"
+        "tittle": "Recipe-Book-App",
+        "dis": "Recipe Book App is a web application that allows users to discover and explore various recipes. It fetches random recipes from the Spoonacular API and displays them in a visually appealing manner. Each recipe is presented with an image, title, list of ingredients, and a link to view the full recipe. Displays recipes with images, titles, ingredients, and links to view the full recipe.Allows users to explore a variety of recipes conveniently.",
+        "live_link": "https://jaiswalrahul2427.github.io/Recipe-Book-App/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Recipe-Book-App.git",
+        "img": "../public/projectImg/recepi.png"
     },
     {
         "id": 6,
-        "tittle": "Google Cloud",
-        "dis": "I've successfully completed the rigorous Cloud Technical Series '23 by Google Cloud Asia Pacific, adding another feather to my cap in the dynamic world of cloud computing",
-        "link": "https://drive.google.com/file/d/1ObmQU567Lolts-VU3f2aUkMhJhnShcHG/view",
-        "img": "https://templates.images.credential.net/17021735784313729070809071438636.png"
+        "tittle": "Expense Tracker Web App",
+        "dis": "Expense Tracker App is a simple web application designed to help users track their expenses conveniently. Users can input their expenses by selecting a category, entering the amount, and specifying the date. The app then displays the expenses in a table format along with a total amount. Users also have the option to delete specific expenses from the list.",
+        "live_link": "https://jaiswalrahul2427.github.io/Expense-Tracker-Web-App/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Expense-Tracker-Web-App.git",
+        "img": "../public/projectImg/expense-tracker.png"
     },
     {
         "id": 7,
-        "tittle": "Java",
-        "dis": "I've completed my Java course with Great Learning!",
-        "link": "https://drive.google.com/file/d/1qUqA5tUqMAfodgQNB_RjKJJ8O1O6YPRN/view",
-        "img": "https://media.licdn.com/dms/image/D5622AQEZOxOpvy1lQQ/feedshare-shrink_800/0/1705648075083?e=1717632000&v=beta&t=XMGA7FTK52NP2tXQztv09GWLdsO72f9PwxvYJQ3Yvv4"
+        "tittle": "User Dashboard System",
+        "dis": "User Dashboard This repository contains the code for a user dashboard web application built using HTML, CSS, and JavaScript. The dashboard provides users with a visually appealing interface to navigate various sections and access relevant information.",
+        "live_link": "https://jaiswalrahul2427.github.io/User-Dashboard-System/",
+        "repo_link": "https://github.com/jaiswalrahul2427/User-Dashboard-System.git",
+        "img": "../public/projectImg/User-dashboard.png"
     },
 
     {
         "id": 8,
-        "tittle": "Web Development Internship",
-        "dis": " I have successfully completed my internship with CodeAlpha !",
-        "link": "https://drive.google.com/file/d/1_FofBFvGktGo9-_7vjX-qZS7q13Gjzti/view",
-        "img": "https://media.licdn.com/dms/image/D4D22AQGkB7xMPwppww/feedshare-shrink_800/0/1696562483912?e=1717632000&v=beta&t=pLsww-QihpvET221Z8NoDQGPYyVCbXo4ox2ZSvUZMag"
+        "tittle": "Bike Web Site",
+        "dis": "This project is a collection of beautifully designed and fully responsive landing pages for bike-related websites. Whether you're running a bike shop, organizing cycling events, or promoting biking accessories, these landing pages provide a sleek and modern interface to captivate your audience.",
+        "live_link": "https://jaiswalrahul2427.github.io/Bike_Landing_Pages_with_Tailwind_CSS/",
+        "repo_link": "https://github.com/jaiswalrahul2427/Bike_Landing_Pages_with_Tailwind_CSS.git",
+        "img": "../public/projectImg/Bike-webpage.png"
     },
     {
         "id": 9,
-        "tittle": "ISP First Training Contest Webinar ",
-        "dis": "Participate in the First Trainings Contest Webinar, hosted by Internsala!",
-        "link": "https://drive.google.com/file/d/1ETNxDPRFefshWpcsN3jgWuHcbabShv_U/view",
-        "img": "https://media.licdn.com/dms/image/D4D22AQE-G1VF4mOPGA/feedshare-shrink_800/0/1694587294931?e=1717632000&v=beta&t=xGzTd53z3d7NnTBDgSxEyq-Sme6cVm4Z2sl2rkpNtJY"
-    },
-    {
-        "id": 10,
-        "tittle": "C Programming Language",
-        "dis": "I have Completed C Programming Language from MeenCat PC!",
-        "link": "https://drive.google.com/file/d/11VVFQ5w-Y5gUgHysPkV1KFtQl7PV7YBV/view",
-        "img": "../src/assets/C Certificate.png"
-    },
-    {
-        "id": 11,
-        "tittle": "Web Development Internship",
-        "dis": " I've successfully completed my internship at OctaNet Services Pvt Ltd.!",
-        "link": "https://drive.google.com/file/d/1MT0v87gth7EjYb_DEfR7k4ALfNsnevg3/view",
-        "img": "https://media.licdn.com/dms/image/D4D22AQHmLwlpA30IFA/feedshare-shrink_800/0/1696147981684?e=1717632000&v=beta&t=BcZU0LHrGN6YFa5cDFE_D5-dohaGA5p5oOu6ioB29_8"
-    },
-    {
-        "id": 12,
-        "tittle": "Web Development Internship",
-        "dis": "I have successfully completed my one-month web development internship at CodSoft",
-        "link": "https://drive.google.com/file/d/1MAvQBo1R_-t-2jeVnfOHCmq8ITyfWfTw/view",
-        "img": "https://media.licdn.com/dms/image/D4D22AQGfrUPMadDV4Q/feedshare-shrink_800/0/1696820155072?e=1717632000&v=beta&t=VubEQHYPLoLLBymZKIX902nIH0kDdnn93nw-PdK4Scc"
-    },
-    {
-        "id": 13,
-        "tittle": "Web Development Professional Certificate",
-        "dis": " Web Development Professional, thanks to my rigorous training at MTF Institute of Management, Technology, and Finance",
-        "link": "https://drive.google.com/file/d/1mXLS05iQD1yLQXXBCC5FKnXWl_wCtfd0/view",
-        "img": "https://media.licdn.com/dms/image/D4D22AQE2upxdN3sJ3g/feedshare-shrink_800/0/1697169124632?e=1717632000&v=beta&t=YgsWvfh7dLMukrXdmZM7nd3y-Usu_eXZjITPpozfJnM"
-    },
-
-    {
-        "id": 14,
-        "tittle": "Java Programming Language Internship ",
-        "dis": "1-month internship at LearnSmasher EduTech LLP, gaining hands-on experience and honing my skills in Java programming language",
-        "link": "https://drive.google.com/file/d/1KaIaN_Tb3eTpZq_xmGUQJW6q63n6SfIq/view?usp=sharing",
-        "img": "https://media.licdn.com/dms/image/D5622AQFwGyLA21II9Q/feedshare-shrink_2048_1536/0/1709702388660?e=1717632000&v=beta&t=jOvmC50Qg5eDZ9lJwiDBjz4CtBm_z2mIDEmK_W3zHYI"
-    },
-    {
-        "id": 15,
-        "tittle": "Web Development Internship",
-        "dis": "2-month internship with LearnSmasher EduTech LLP",
-        "link": "https://drive.google.com/file/d/1oHuRJSpiRkE7STEDgFcxEe-sLEzbqt2A/view?usp=sharing",
-        "img": "https://media.licdn.com/dms/image/D5622AQEIB0s_OFuFbw/feedshare-shrink_800/0/1704982406542?e=1717632000&v=beta&t=xKi_CXX532123A05r7kHO20Yg4r0bFwIGnylJwm-VTc"
+        "tittle": "Calculator",
+        "dis": "Welcome to the Simple Calculator Code Repository! Here, you'll find a collection of code files for a basic calculator implemented in various programming languages.",
+        "live_link": "https://jaiswalrahul2427.github.io/CODSOFT_Calculator/",
+        "repo_link": "https://github.com/jaiswalrahul2427/CODSOFT_Calculator.git",
+        "img": "../public/projectImg/CAlculator.png"
     }
+
 ]
